2010-11-26  Andy Buckley  <andy@insectnation.org>

	* CDF_2005_S6217184.cc, CDF_2008_S7782535.cc: Updates to use the
	new per-jet JetAlg interface (and some other fixes).

	* JetAlg.cc: Changed the interface on request to return per-jet
	rather than per-event jet shapes, with an extra jet index argument.

	* MathUtils.hh: Adding index_between(...) function, which is handy
	for working out which bin a value falls in, given a set of bin edges.

2010-11-25  Andy Buckley  <andy@insectnation.org>

	* Cmp.hh: Adding ASC/DESC (and ANTISORTED) as preferred
	non-EQUIVALENT enum value synonyms over misleading
	SORTED/UNSORTED.

	* Change of rapidity scheme enum name to RapScheme

	* Reworking JetShape a bit further: constructor args now avoid
	inconsistencies (it was previously possible to define incompatible
	range-ends and interval). Internal binning implementation also
	reworked to use a vector of bin edges: the bin details are
	available via the interface. The general jet pT cuts can be
	applied via the JetShape constructor.

	* MathUtils.hh: Adding linspace and logspace utility
	functions. Useful for defining binnings.

	* Adding more general cuts on jet pT and (pseudo)rapidity.

2010-11-11  Andy Buckley  <andy@insectnation.org>

	* Adding special handling of FourMomentum::mass() for computed
	zero-mass vectors for which mass2 can go (very slightly) negative
	due to numerical precision.

2010-11-10  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Adding ATLAS-CONF-2010-083 conference note. Data is read from plots.
	When I run Pythia 6 the bins close to pi/2 are higher than in the note,
	so I call this "unvalidated". But then ... the note doesn't specify
	a tune or even just a version for the generators in the plots. Not even
	if they used Pythia 6 or Pythia 8. Probably 6, since they mention AGILe.

2010-11-10  Andy Buckley  <andy@insectnation.org>

	* Adding a JetAlg::useInvisibles(bool) mechanism to allow ATLAS