@@ -78,11 +78,11 @@ namespace Rivet {
     if (lowbound == OPEN && highbound == OPEN) {
       return (value > low && value < high);
     } else if (lowbound == OPEN && highbound == CLOSED) {
-      return (value > low && value <= high);
+      return (value > low && (value < high || fuzzyEquals(value, high)));
     } else if (lowbound == CLOSED && highbound == OPEN) {
-      return (value >= low && value < high);
+      return ((value > low || fuzzyEquals(value, low)) && value < high);
     } else { // if (lowbound == CLOSED && highbound == CLOSED) {
-      return (value >= low && value <= high);
+      return ((value > low || fuzzyEquals(value, low)) && (value < high || fuzzyEquals(value, high)));
     }
   }
 
