@@ -125,6 +125,7 @@ namespace Rivet {
     /// Central \f$ r \f$ value for bin @a rbin.
     double rBinMid(size_t rbin) const {
       assert(inRange(rbin, 0, numBins()));
+      //cout << _binedges << endl;
       return (_binedges[rbin] + _binedges[rbin+1])/2.0;
     }
 
