@@ -38,7 +38,7 @@ namespace Rivet {
         stringstream ss; ss << "JetShape" << i;
         const string pname = ss.str();
         _jsnames_pT[i] = pname;
-        const JetShape jsp(jetproj, 0.0, 0.7, 6, _ptedges[i], _ptedges[i+1], 0.0, 0.7, RAPIDITY);
+        const JetShape jsp(jetproj, 0.0, 0.7, 7, _ptedges[i], _ptedges[i+1], 0.0, 0.7, RAPIDITY);
         addProjection(jsp, pname);
         _h_Psi_pT[i] = bookProfile1D(i+1, 2, 1);
       }
